Add test for `harmony search gbest selection pressure`

--- a/test/harmony/CMakeLists.txt
+++ b/test/harmony/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 add_subdirectory(default)
-
+add_subdirectory(gbest_selection_pressure)
 
 # if you want to add test and test executable.
 # add_executable(sample-test-name source)
